--- a/Aplikacija/KonacniProjekat/Pages/KvizDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizDodaj.cshtml
@@ -9,10 +9,12 @@
 </div>
 
 <form method="post">
-    <label>Naziv kviza:</label> <input asp-for="NoviKviz.NazivKviza" class="form-control" placeholder="Naziv kviza" />
-    <label>Znamenitost:</label> <select asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista">
-                                    <option value="">Bez znamenitosti</option>
-                                </select>
+    <div class="form-group">
+        <label class="form-control">Naziv kviza:</label> <input asp-for="NoviKviz.NazivKviza" class="form-control" placeholder="Naziv kviza" />
+        <label class="form-control">Znamenitost:</label>    <select class="form-control" asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista">
+                                                                <option value="">Bez znamenitosti</option>
+                                                            </select>
 
-    <button type="submit">Dodaj novi kviz</button>
+        <button type="submit">Dodaj novi kviz</button>
+    </div>
 </form>
