--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
@@ -1,4 +1,35 @@
 ﻿@page
 @model KonacniProjekat.ZnamenitostSveModel
 @{
+ViewData["Title"]="Znamenitosti";
 }
+
+<div class="text-center">
+    <h1 class="display-4">Znamenitosti</h1>
+</div>
+
+<div class="text-right">
+    <h3><a asp-page="./ZnamenitostDodaj">Dodaj znamenitost</a></h3>
+</div>
+
+<div>
+    <table class="table table-bordered">
+        <thead>
+            <th>ID znamenitosti</th>
+            <th>Naziv znamenitosti</th>
+            <th></th>
+        </thead>
+        <tbody>
+            <form method="get">
+                @foreach (var znamenitost in Model.SveZnamenitosti)
+                {
+                    <tr>
+                        <td>@znamenitost.IdZnamenitosti</td>
+                        <td>@znamenitost.NazivZnamenitosti</td>
+                        <td><a asp-page="./ZnamenitostJedna" asp-route-id="@Model.SessionId" asp-route-znamenitost="@znamenitost.IdZnamenitosti">Vidi znamenitost</a></td>
+                    </tr>
+                }
+            </form>
+        </tbody>
+    </table>
+</div>
