--- a/Aplikacija/KonacniProjekat/Pages/Prijava.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Prijava.cshtml
@@ -2,3 +2,24 @@
 @model KonacniProjekat.PrijavaModel
 @{
 }
+
+
+<form method="post">
+  <div class="prijava fadeInDown">
+    <div id="formContent">
+      <input type="text"  placeholder="Korisnicko ime" asp-for="TrenutniKorisnik.Username">
+      <input type="password"  placeholder="Lozinka" asp-for="TrenutniKorisnik.Password">
+      <button type="submit">Prijavi se</button>
+    </div>
+  </div>
+</form>
+
+@if (Model.SessionId == -1)
+{
+  <div class="prijava fadeInDown">
+   <div class="alert alert-danger" role="alert">
+     Uneli ste pogresno korisnicko ime ili lozinku.
+   </div>
+ </div>
+}
+
