--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostJedna.cshtml
@@ -1,4 +1,18 @@
 ﻿@page
 @model KonacniProjekat.ZnamenitostJednaModel
 @{
+ViewData["Title"] = "Znamenitosti";
 }
+
+<div class=text-center>
+    <h1 class="display-4">@Model.TrenutnaZnamenitost.NazivZnamenitosti</h1>
+</div>
+
+<form method="get">
+    <div><h4>Naziv:</h4> @Model.TrenutnaZnamenitost.NazivZnamenitosti</div>
+    <div><h4>Lokacija:</h4> @Model.TrenutnaZnamenitost.Lokacija</div>
+    <div><h4>Opis:</h4> @Model.TrenutnaZnamenitost.Opis</div>
+    <div><h4>Radno vreme:</h4> @Model.TrenutnaZnamenitost.RadnoVreme</div>
+    <div><h4>Broj telefona:</h4> @Model.TrenutnaZnamenitost.BrojTelefona</div>
+    <div><h4>Cena ulaznice:</h4> @Model.TrenutnaZnamenitost.CenaUlaznice</div>
+</form>
