--- a/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
@@ -18,7 +18,7 @@
       <h2>@vodic.ImeVodica @vodic.PrezimeVodica</h2>
       <p>Kontakt: @vodic.Email</p>
       <p>Ocena: @vodic.Ocena</p>
-      <a href="/Vodici/ViewOne?id=@vodic.IdVodica">Prikazi detalje</a>
+ <a asp-page="./VodicJedan" asp-route-id="@vodic.IdVodica">Prikazi detalje</a>
     </div>
   </div>
  </div>
