--- a/Aplikacija/KonacniProjekat/Pages/KvizObrisiPitanje.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizObrisiPitanje.cshtml
@@ -1,4 +1,24 @@
 ﻿@page
 @model KonacniProjekat.KvizObrisiPitanjeModel
 @{
+    ViewData["Title"]="Brisanje pitanja";
 }
+
+<form method="post">
+    <input type="hidden" asp-for="@Model.PitanjeId" />
+    <input type="hidden" asp-for="@Model.SessionId" />
+    <label class="form-control select-fit-text" >
+        <div class="div-obrisi-pitanje"> <h5>Da li ste sigurni da želite da obrišete sledeće pitanje:</h5>
+            <label class="form-control select-fit-text">
+                @Model.PitanjeZaBrisanje.TekstPitanja
+            </label>
+                <h5>iz kviza </h5>
+            <label  class="form-control select-fit-text">
+                @Model.PitanjeZaBrisanje.IdKvizaNavigation.NazivKviza
+            </label>    
+            <h5>?</h5> 
+        </div> 
+    </label>
+        <button type="submit" class="btn btn-danger">Obriši pitanje</button>    
+        <a asp-page="./KvizJedan" asp-route-id="@Model.SessionId" asp-route-kviz="@Model.PitanjeZaBrisanje.IdKviza">Vrati se na prikaz kviza</a>
+</form>
