--- a/Aplikacija/KonacniProjekat/Pages/VodicSviNalozi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicSviNalozi.cshtml
@@ -2,3 +2,25 @@
 @model KonacniProjekat.VodicSviNaloziModel
 @{
 }
+
+<div class="text-center">
+    <h1 class="display-4">Vodici</h1>
+</div>
+  <a asp-page="./VodicDodaj">Dodaj vodica</a>
+<form method="post">
+    @foreach (var vodic in Model.Vodici) 
+{
+<div class="card">
+  <div class="container">
+   <h3>Id: @vodic.IdVodica</h3>
+    <p>Ime i prezime: @vodic.ImeVodica @vodic.PrezimeVodica</p>
+    <p>Datum rođenja: @vodic.DatumRodjenja</p>
+    <p>Pol: @vodic.Pol</p>
+    <p>Broj telefona: @vodic.BrojTelefona</p>
+    <p>Email: @vodic.Email</p>
+    <p>Ocena: @vodic.Ocena</p>
+    <button type="submit" asp-route-id="@vodic.IdVodica" asp-page-handler="Obrisi">Obrisi vodica</button> 
+  </div>
+</div>
+}
+</form>
