--- a/Aplikacija/KonacniProjekat/wwwroot/css/site.css
+++ b/Aplikacija/KonacniProjekat/wwwroot/css/site.css
@@ -70,24 +70,7 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.uradi
-{
-  float: right;
-  border-radius: 60%;
-  background-color: #d3d2d2; 
-  color: black;
-  align-items: center;
-  transition-duration: 0.4s;
-  font-size: 24px;
-  margin-bottom: 20px;
-  padding: 7px;
-  border-color: #747272;
-}
-.uradi:hover {
-  background-color: rgb(64, 66, 64); /* Green */
-  color: white;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
+
 
 .registracija, .prijava {
   display: flex;
@@ -183,10 +166,90 @@ input[type=text]:placeholder
   display: flex;
   justify-content: space-around;
 }
-
-.card {
-  background-color: rgba(0,0,0,0.10);
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 200px;
+  perspective: 1000px;
+  background-color: rgba(255, 255, 255, 0.8);
+  margin-top: 20px;
 }
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+  border-radius: 50px 20px;
+}
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  margin: 10px;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+
+.oceni {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+.oceni:hover{
+  opacity: 0.7;
+}
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: #bbb;
+  color: white;
+  transform: rotateY(180deg);
+}
+
 
 .cela-pocetna-stranica * {
   margin-bottom: 1%;
