--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
@@ -18,6 +18,7 @@ ViewData["Title"]="Znamenitosti";
             <th>ID znamenitosti</th>
             <th>Naziv znamenitosti</th>
             <th></th>
+			<th></th>
         </thead>
         <tbody>
             <form method="get">
@@ -27,6 +28,7 @@ ViewData["Title"]="Znamenitosti";
                         <td>@znamenitost.IdZnamenitosti</td>
                         <td>@znamenitost.NazivZnamenitosti</td>
                         <td><a asp-page="./ZnamenitostJedna" asp-route-id="@Model.SessionId" asp-route-znamenitost="@znamenitost.IdZnamenitosti">Vidi znamenitost</a></td>
+						 <td><a asp-page="./ZnamenitostIzmeni" asp-route-id="@znamenitost.IdZnamenitosti">Izmeni znamenitost</a></td>
                     </tr>
                 }
             </form>
